--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,52 @@
-/* You can add global styles to this file, and also import other style files */
+@import "variables";
+@import "helper";
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.4;
+  background-color: #e8eaf6;
+  font-size: 1rem;
+}
+
+.container {
+  max-width: 800px;
+  width: calc(100vw - 4rem);
+  margin: 2rem auto;
+}
+
+.collapse-line {
+  border: none;
+  background: none;
+  padding: 0;
+  padding-left: 1rem;
+  width: 15px;
+  margin-top: 0.5rem;
+  position: relative;
+  cursor: pointer;
+  outline: none;
+  transform: translateX(50%);
+}
+
+.collapse-line:hover::before,
+.collapse-line:focus-visible::before {
+  background-color: hsl(0, 0%, 50%);
+}
+
+.collapse-line::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  // left: 50%;
+  right: 0;
+  width: 2px;
+  background-color: hsl(0, 0%, 75%);
+  transition: background-color 100ms ease-in-out;
+}
