--- a/src/app/comments/components/comment/comment.component.html
+++ b/src/app/comments/components/comment/comment.component.html
@@ -66,7 +66,7 @@
         [edit]="true"
         [comment]="comment"
         [currentUser]="currentUser"
-        (submitEvent)="onUpdate()"
+        (submitEvent)="onUpdate($event)"
       ></app-create-comment>
     </div>
   </div>
